crates/keron-lang/tests/corpus/errors/check/forward_ref.keron
val first = second + 1
val second = 10
